--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="assets/images/product.png" alt="NutriBoost Can" id="drink-can">
         <div id="logo">
             <!-- Your logo image or text goes here -->
-            <img src="assets/images/logo.png" alt="NutriBoost Logo" style="width: 200px; height: auto;"> 
+            <img src="assets/images/logo.png" alt="NutriBoost Logo" class="logo-img"> 
         </div>
         <div id="info-left">
             <!-- Information on the left side -->
