--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <img class="leaf left" src="assets/images/leaves-left.png" alt="Left Leaf">
     <img class="leaf right" src="assets/images/leaves-right.png" alt="Right Leaf">
     <div id="container">
-        <img src="assets/images/product.png" alt="NutriBoost Can" id="drink-can">
+        <img src="assets/images/nutriboost_can_sachira.png" alt="NutriBoost Can Sachira" id="drink-can">
         <div id="logo">
             <!-- Your logo image or text goes here -->
-            <img src="assets/images/logo.png" alt="NutriBoost Logo" class="logo-img"> 
+            <img src="assets/images/logo.png" alt="NutriBoost Logo Sachira" class="logo-img"> 
+        </div>
+        <div id="description">
+            <p>Grown and cultivated in the paradise of Sri Lanka, NutriBoost is your finest drink choice for any  situation, be it to rehydrate or as a fitness shake. Every sip of NutriBoost contains calories of potassium, calcium, amino acids and electrolytes. Enjoy the purest form of savor to satisfy yourself.</p>
+
         </div>
         <div id="info-left">
             <!-- Information on the left side -->
@@ -29,6 +33,7 @@
             <p>Price: Rs.250</p>
             <p>Ingredients: King Coconut, Water</p>
         </div>
+        
     </div>
 
     <div id="hashtags">
